# s3_snowflake_pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
src/s3_snowflake_pipeline/defs/dbt_cloud_transforms/: dbt_cloud_assets.py
src/s3_snowflake_pipeline/defs/hightouch_reverse_etl/: defs.yaml
src/s3_snowflake_pipeline/defs/s3_ingestion/: defs.yaml  loads.py
src/s3_snowflake_pipeline/defs/schedules/: daily_pipeline.py
src/s3_snowflake_pipeline/defs/sling_ingestion/: defs.yaml  replication.yaml
src/s3_snowflake_pipeline/defs/snowflake_connection/: defs.yaml
src/s3_snowflake_pipeline/defs/snowflake_s3_ingest/: defs.yaml  ingest.sql
tests/: test_asset_keys.py
