[project]
name = "s3_snowflake_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.19",
    "dagster-dbt>=0.28.19",
    "dagster-dlt>=0.28.19",
    "dagster-hightouch>=0.28.19",
    "dagster-sling>=0.28.19",
    "dagster-snowflake>=0.28.19",
    "dlt[filesystem,snowflake]>=1.23.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "s3_snowflake_pipeline"
registry_modules = [
    "s3_snowflake_pipeline.components.*",
]


